--- a/my-app/public/manifest.json
+++ b/my-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "ROX Skill Planner",
+  "name": "Ragnarok X Skill Planner",
   "icons": [
     {
       "src": "favicon.ico",
