--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "ragnarokx-tools-planner": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
